update: details fixed

--- a/src/app/pages/questions/question/answer/answer.component.html
+++ b/src/app/pages/questions/question/answer/answer.component.html
@@ -5,9 +5,9 @@
 >
   <div class="answer-icon">
     @if (answerItem.checked) {
-    <app-selected-answer-icon class="max-lg:size-16" />
+    <app-selected-answer-icon class="max-lg:size-16 size-[88px]" />
     } @else{
-    <app-answer-icon class="max-lg:size-16" />
+    <app-answer-icon class="max-lg:size-16 size-[88px]" />
     }
     <p>
       @switch (indexNumber) { @case (0) {A} @case (1) {B} @case (2) {C} @case
