--- a/src/app/pages/questions/question/question.component.html
+++ b/src/app/pages/questions/question/question.component.html
@@ -3,7 +3,7 @@
     class="question-text"
     [ngClass]="{
       'first-question':
-        this.firstQuestion?.id_question === questionItem.id_question
+        this.firstQuestion.id_question === questionItem.id_question
     }"
   >
     {{ questionItem.question_text }}
