--- a/src/app/pages/start-view/start-view.component.html
+++ b/src/app/pages/start-view/start-view.component.html
@@ -61,12 +61,12 @@
       </form>
     </div>
 
-    <div class="sendbar">
+    <div class="sendbar" (click)="onSubmit()">
       <div class="sendbar-text">
         <img src="../../../assets/images/brain.png" alt="Brain image" />
         <span>Empezar a jugar</span>
       </div>
-      <div (click)="onSubmit()" class="send-icon-container">
+      <div class="send-icon-container">
         <app-send-icon class="max-lg:size-[17.7px]" />
       </div>
     </div>
