--- a/src/app/pages/start-view/start-view.component.css
+++ b/src/app/pages/start-view/start-view.component.css
@@ -1,6 +1,5 @@
 .start-view-container {
-  max-width: 1440px;
-  height: 100%;
+  height: 100vh;
   padding: 28px 114px;
   background-image: url("/assets/images/start-view-bg-img.png");
   background-size: cover;
@@ -9,8 +8,8 @@
 
 .start-view-model {
   max-width: 1212px;
-  padding-top: 24px;
-  padding-bottom: 32px;
+  padding: 24px 46px 32px;
+  margin-inline: auto;
   border-radius: 10px;
   background: #eef3f8;
   box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.25),
@@ -45,7 +44,6 @@
 .tips-form-container {
   display: flex;
   flex-direction: row;
-  padding-inline: 46px;
   gap: 46px;
 }
 
@@ -67,10 +65,11 @@
   justify-content: space-between;
   align-items: center;
   margin-inline: auto;
-  margin-top: 70px;
+  margin-top: 40px;
   border-radius: 30px;
   background: #fff;
   box-shadow: 0px 2px 13.5px 0px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
 
   .sendbar-text {
     display: flex;
