update: next, prev and send buttons, time line questions behavior

--- a/src/app/pages/questions/question/pagination/pagination.component.html
+++ b/src/app/pages/questions/question/pagination/pagination.component.html
@@ -1,4 +1,4 @@
-<li class="pagination-item" (click)="changePage(currentPage.id)">
+<li class="pagination-item">
   @if (currentPage.checked) {
   <app-selected-answer-icon class="max-lg:size-16" />
   } @else {
@@ -8,3 +8,5 @@
     currentPage.id
   }}</span>
 </li>
+
+<!-- <li class="pagination-item" (click)="changePage(currentPage.id)"></li> -->
