--- a/src/app/pages/questions/results/results.component.html
+++ b/src/app/pages/questions/results/results.component.html
@@ -70,7 +70,7 @@
         </div>
       </div>
 
-      <div>
+      <div class="h-auto">
         <div class="skills-result-container">
           <div class="skill-item first-skill">
             <div class="skill-percentage-container">
