--- a/src/app/pages/questions/results/results.component.css
+++ b/src/app/pages/questions/results/results.component.css
@@ -1,5 +1,6 @@
 .result-container {
   width: 100%;
+  height: 100dvh;
   background-image: url("/assets/images/results-bg-img.png");
   background-size: cover;
   padding: 36px 39px 70px 39px;
@@ -7,12 +8,12 @@
 
 .result-modal {
   width: 1362px;
-  height: 909px;
+  height: 786px;
   margin-inline: auto;
   border-radius: 10px;
+  padding-top: 14px;
   padding-inline: 26px;
   position: relative;
-  padding-top: 50px;
   background: #eef3f8;
   box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.25),
     0px 0px 50px 30px rgba(255, 255, 255, 0.78) inset;
@@ -23,20 +24,19 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 48px;
+  font-size: 40px;
   font-style: normal;
-  line-height: 65px; /* 135.417% */
+  line-height: 65px;
   color: black;
-  font-size: 46px;
   font-style: normal;
   font-weight: 900;
-  line-height: 65px; /* 141.304% */
+  line-height: 65px;
   text-transform: uppercase;
 
   .user-name {
     color: #3e2c80;
     font-family: "plusjakartasans-regular";
-    font-size: 50px;
+    font-size: 40px;
     font-style: normal;
     line-height: normal;
   }
@@ -47,18 +47,21 @@
 
   span {
     font-family: "plusjakartasans-bold";
+    font-size: 40px;
   }
 }
 
 .result-details-container {
+  max-height: 464px;
   display: flex;
   flex-direction: row;
   gap: 20px;
-  margin-top: 42px;
+  margin-top: 15px;
   margin-bottom: 67px;
 }
 
 .result-resume-container {
+  height: auto;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -67,8 +70,7 @@
     display: flex;
     flex-direction: row;
     width: 360px;
-    height: 488px;
-    padding: 45px 7px;
+    padding: 25px 7px 0px;
     gap: 29px;
     border-radius: 4px 0px 0px 4px;
     border: 2px solid #fff;
@@ -177,7 +179,7 @@
     display: flex;
     justify-content: center;
     width: 299px;
-    height: 488px;
+    height: 100%;
     padding: 20px 16px;
     align-items: center;
     gap: 24px;
@@ -198,10 +200,10 @@
   max-width: 742px;
   height: auto;
   gap: 13px;
-  margin-bottom: 28px;
+  margin-bottom: 20px;
 
   .skill-item {
-    height: 230px;
+    height: 199px;
     padding: 20px 16px;
     align-items: center;
     gap: 24px;
@@ -218,12 +220,16 @@
     .skill-percentage-container {
       display: flex;
       position: relative;
+
+      .icon-result {
+        margin-top: -10px;
+      }
     }
 
     .skill-percentage {
       position: absolute;
-      top: 33%;
-      right: 35%;
+      top: 28%;
+      right: 34%;
       max-width: 59px;
       height: 57px;
       flex-direction: column;
@@ -242,14 +248,14 @@
   .person-type-container {
     display: flex;
     justify-content: center;
-    width: 147px;
-    height: 37px;
     color: #fff;
     font-family: "ruberoid-regular";
     font-size: 15px;
     font-style: normal;
     font-weight: 700;
     width: 165px;
+    position: absolute;
+    bottom: 8%;
 
     height: 46px;
     padding: 20px 16px;
@@ -286,7 +292,7 @@
 .result-description {
   display: flex;
   max-width: 630px;
-  height: 230px;
+  max-height: 242px;
   padding: 20px 16px;
   align-items: center;
   gap: 24px;
@@ -406,6 +412,10 @@
       line-height: normal;
     }
 
+    span {
+      font-size: 25px;
+    }
+
     span:last-child {
       margin-top: 7px;
       line-height: normal;
@@ -413,17 +423,21 @@
   }
 
   .result-details-container {
+    width: 100%;
+    max-height: 600px;
     margin-top: 14px;
     margin-bottom: 24px;
     flex-direction: column;
+    justify-content: center;
     gap: 14px;
     padding: 0 11px;
   }
 
   .result-resume-container {
+    width: 100%;
+
     .result-graphs {
-      grid-auto-rows: 40px;
-      width: auto;
+      width: 75%;
       height: 250px;
       padding: 11px 7px;
       gap: 13px;
@@ -461,10 +475,10 @@
     }
 
     .img-result {
+      width: 23.5%;
+      height: 250px;
       display: flex;
       justify-content: center;
-      width: auto;
-      height: 250px;
       padding: 0;
       align-items: center;
       gap: 24px;
@@ -494,6 +508,7 @@
 
     .skill-percentage-container {
       margin-inline: auto;
+      margin-top: -4%;
 
       width: 113px;
 
@@ -503,7 +518,9 @@
 
       .skill-percentage {
         position: block;
-        left: 28%;
+        top: 20%;
+        left: 46%;
+        transform: translate(-50%);
         font-size: 16px;
       }
     }
@@ -514,7 +531,9 @@
       height: 25px;
       padding: 0;
       border: 1px solid white;
-      margin-inline: auto;
+      bottom: 1%;
+      left: 50%;
+      transform: translate(-50%);
     }
   }
 
@@ -525,7 +544,7 @@
   }
 
   .footer-results {
-    flex-direction: column;
+    flex-direction: column-reverse;
     background-image: none;
     width: 100%;
     height: auto;
