--- a/src/app/pages/questions/question/question.component.html
+++ b/src/app/pages/questions/question/question.component.html
@@ -1,4 +1,7 @@
-<div class="question-container">
+<div
+  class="question-container"
+  [ngClass]="{ 'question-answered': this.answerIndex !== -1 }"
+>
   <p
     class="question-text"
     [ngClass]="{
