--- a/src/app/pages/questions/question/answer/answer.component.css
+++ b/src/app/pages/questions/question/answer/answer.component.css
@@ -8,13 +8,40 @@
 
   .answer-icon {
     position: absolute;
-    top: -14px;
-    right: 95px;
+    top: 11%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 1;
     cursor: pointer;
 
     .pchecked {
       color: white;
+    }
+
+    .selected-answer-icon {
+      width: 46px;
+      height: 46px;
+      border: 1px solid #585ef3;
+      background: linear-gradient(
+        to right,
+        rgba(88, 94, 243, 1) 30%,
+        rgba(132, 136, 238, 1) 100%
+      );
+      border-radius: 50%;
+    }
+
+    .answered-icon {
+      width: 46px;
+      height: 46px;
+      border: 1px solid white;
+      background: linear-gradient(
+        to bottom,
+        rgba(197, 204, 222, 1) 0,
+        white 100%
+      );
+      border-radius: 50%;
+
+      filter: drop-shadow(0px 9px 15.1px rgba(53, 63, 83, 0.25));
     }
   }
 
@@ -25,8 +52,9 @@
     font-weight: 600;
     line-height: normal;
     position: absolute;
-    top: 20px;
-    right: 40%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
 
@@ -65,15 +93,24 @@
     position: relative;
 
     .answer-icon {
-      top: 0;
-      left: -32px;
+      top: 50%;
+      left: -11px;
+      transform: translate(0, -50%);
+
+      .selected-answer-icon {
+        width: 23px;
+        height: 23px;
+      }
+
+      .answered-icon {
+        width: 23px;
+        height: 23px;
+      }
     }
 
     p {
       width: fit-content;
       font-size: 12px;
-      top: 18px;
-      left: 27px;
     }
   }
 
