--- a/src/app/pages/questions/questions.component.css
+++ b/src/app/pages/questions/questions.component.css
@@ -24,7 +24,6 @@
   width: 230px;
   height: 2px;
   background: #dce3ed;
-  margin-bottom: 15px;
 }
 
 .pagination-line-marked {
@@ -36,6 +35,14 @@
   flex-direction: row;
   justify-content: center;
   gap: 80px;
+
+  button {
+    transition: transform 0.2s ease-in-out;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
 }
 
 .next-question-button,
